[package]
name = "wt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.7", features = ["ws", "headers"] }
redis = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
headers = "0.3"
axum-typed-websockets = "0.4.0"
shuuro = "0.5.93"
glicko2 = "0.3.1"
json_value_merge = "1.1.2"
sha2 = "0.10.1"
hex-literal = "0.2.1"
base64 = "0.13.0"
rand = "0.8.4"
url = "2.2.2"
querystring = "1.1.0"
time = { version = "0.2", features = ["serde"] }
serde_with = "1.14.0"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["async-std-runtime"]


