[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["ws","headers"] }
futures = "0.3.0"
async-session = "3.0.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = "0.21.5"
sha2 = "0.10.1"
hex-literal = "0.2.1"
base64 = "0.13.0"
rand = "0.8.4"
url = "2.2.2"
bson = "2.1.0"
querystring = "1.1.0"
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["json"] }
axum-macros = "0.2.2"
hyper = "0.14"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["tokio-runtime"]
